# money-tracker-backend

./: .env.docker  .env.example  Cargo.toml  Dockerfile  Dockerfile.railway  Makefile  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: cargo.yml  conventional-commits.yml  test.yml
examples/: call-endpoints.sh
migrations/: 20220921195538_create_user.up.sql  20221024212739_create_account.down.sql  20221024212739_create_account.up.sql  20221125224713_add-auth-user-store.up.sql  20230108145018_add_amount_to_debtor_payment.down.sql  20230108145018_add_amount_to_debtor_payment.up.sql  20230108165324_remove_percentage_from_debtors.down.sql  20230108165324_remove_percentage_from_debtors.up.sql  20230108172159_add_creation_date_of_auth_user.down.sql  20230108172159_add_creation_date_of_auth_user.up.sql  20230324231805_initial-setup.down.sql  20230324231805_initial-setup.up.sql
migrations/2022-09-18-135652_create_users/: up.sql
seeding/: create-snapshot.sh
src/: actions.rs  api.rs  auth.rs  authentication.rs  conversion.rs  db.rs  error.rs  logging.rs  main.rs  model.rs  models.rs  open_api.rs  schema.rs
src/controller/: account.rs  cost.rs  mod.rs  payment.rs
src/db/: account.rs  cost.rs  mod.rs  payment.rs
src/model/: db.rs  dto.rs  entity.rs  mod.rs
src/model/dto/: auth.rs  request.rs  response.rs
src/service/: account.rs  cost.rs  payment.rs
