[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
sqlx = { version = "0.6", features = [
  "json",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
hyper = "0.14.20"
