[package]
name = "money-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
sqlx = { version = "0.6", features = [
  "chrono",
  "json",
  "offline",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }

chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
headers = "0.3"
http = "0.2"
hyper = "0.14"
oauth2 = "4"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "3", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }
